--- a/DevNet/DevNet/bin/DevNet.dll.config
+++ b/DevNet/DevNet/bin/DevNet.dll.config
@@ -10,7 +10,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-DevNet-20150301024013.mdf;Initial Catalog=aspnet-DevNet-20150301024013;Integrated Security=True" providerName="System.Data.SqlClient" />
-    
+    <!--<add name="DevNet" connectionString="Data Source=tcp:g74xl0join.database.windows.net,1433;Initial Catalog=DevNet;User ID=OrahK613@g74xl0join;Password=OKeter613"  />-->
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
