--- a/DevNet/DevNet/bin/DevNet.dll.config
+++ b/DevNet/DevNet/bin/DevNet.dll.config
@@ -18,6 +18,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Enviroment" value=""/>
+    <!--<add key="MigrateDatabaseToLatestVersion" value="true"/>-->
+    <!--<add key="MigrateDatabaseToLatestVersion" value="true" xdt:Locator="Match(key)" xdt:Transform="SetAttributes"/>-->
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -26,6 +29,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web" />
     </httpModules>
+    <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
     <modules>
