Added improvements to view for consuming web service

--- a/DevNet/DevNet/DevNet.csproj
+++ b/DevNet/DevNet/DevNet.csproj
@@ -223,7 +223,9 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Automobile.cs" />
     <Compile Include="Models\AutoPriceWebService.cs" />
+    <Compile Include="Models\AutoViewModel.cs" />
     <Compile Include="Models\Developer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
