--- a/ContosoUniversity/bin/ContosoUniversity.dll.config
+++ b/ContosoUniversity/bin/ContosoUniversity.dll.config
@@ -9,14 +9,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SchoolContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=ContosoUniversity2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <!--<add name="SchoolContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=ContosoUniversity2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
+    <add name="SchoolContext" connectionString="Data Source=tcp:g74xl0join.database.windows.net,1433;Initial Catalog=DevNet;User ID=OrahK613@g74xl0join;Password=OKeter613" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="MigrateDatabaseToLatestVersion" value="false"/>
+    <!--<add key="MigrateDatabaseToLatestVersion" value="false"/>-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
