Changed connection string

--- a/ContosoUniversity/Web.config
+++ b/ContosoUniversity/Web.config
@@ -10,10 +10,10 @@
   </configSections>
   <connectionStrings>
     <!-- Local Development Database -->
-    <add name="SchoolContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=ContosoUniversity5;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <!--<add name="SchoolContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=ContosoUniversity5;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
 
     <!-- Azure SQL Server Production Database  -->
-    <!--<add name="SchoolContext" connectionString="Data Source=tcp:g74xl0join.database.windows.net,1433;Initial Catalog=DevNet;User ID=OrahK613@g74xl0join;Password=OKeter613" providerName="System.Data.SqlClient" />-->
+    <add name="SchoolContext" connectionString="Data Source=tcp:g74xl0join.database.windows.net,1433;Initial Catalog=DevNet;User ID=OrahK613@g74xl0join;Password=OKeter613" providerName="System.Data.SqlClient" />
   
   </connectionStrings>
   <appSettings>
