--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -146,6 +146,10 @@
     <Compile Include="Migrations\201503101958340_DepartmentSP.Designer.cs">
       <DependentUpon>201503101958340_DepartmentSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503111813171_RowVersion.cs" />
+    <Compile Include="Migrations\201503111813171_RowVersion.Designer.cs">
+      <DependentUpon>201503111813171_RowVersion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
@@ -234,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503101958340_DepartmentSP.resx">
       <DependentUpon>201503101958340_DepartmentSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503111813171_RowVersion.resx">
+      <DependentUpon>201503111813171_RowVersion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
