--- a/DevNet/DevNet/Web.config
+++ b/DevNet/DevNet/Web.config
@@ -9,9 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
+    
+    <!-- Local Development Database -->
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-DevNet-20150323102516.mdf;Initial Catalog=aspnet-DevNet-20150323102516;Integrated Security=True" providerName="System.Data.SqlClient" />-->
 
-    <!-- Local Development Database -->
     <!--<add name="DefaultConnection" connectionString="Data Source=KERBEROS\MSSQLSERVER2012;Initial Catalog=DevNet;User ID=sa;Password=OKeter613;" providerName="System.Data.SqlClient" />-->
     
     <!-- Azure SQL Server Production Database  -->
@@ -24,20 +25,21 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AppStartup" value="DevNet.Startup,DevNet" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <httpModules>
+    <!--<httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web" />
-    </httpModules>
+    </httpModules>-->
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
-      <remove name="ApplicationInsightsWebTracking" />
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web" preCondition="managedHandler" />
+      <!--<remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web" preCondition="managedHandler" />-->
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
