--- a/DevNet/DevNet/DevNet.csproj
+++ b/DevNet/DevNet/DevNet.csproj
@@ -198,6 +198,8 @@
     <Compile Include="Bootstrap Html Helpers\DatePickerFor.cs" />
     <Compile Include="Bootstrap Html Helpers\HelperMethods.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DashboardController.cs" />
+    <Compile Include="Controllers\DevTVController.cs" />
     <Compile Include="Controllers\FavoriteIDEController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -233,12 +235,13 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\button-icon.png" />
+    <Content Include="Content\logos\full_logo.png" />
+    <Content Include="Content\textures\crate.gif" />
+    <Content Include="Content\dashboard.css" />
     <Content Include="Content\datepicker.css" />
     <Content Include="Content\datepicker3.css" />
-    <Content Include="Content\full_logo.png" />
-    <Content Include="Content\full_logo1.png" />
-    <Content Include="Content\full_logo2.png" />
-    <Content Include="Content\full_logo3.png" />
+    <Content Include="Content\textures\large_logo.png" />
     <Content Include="Content\medium_video_gallery.png" />
     <Content Include="Content\small_video_gallery.png" />
     <Content Include="Content\themes\base\accordion.css" />
@@ -362,6 +365,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\three.js" />
+    <Content Include="Scripts\three.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -427,6 +432,9 @@
     <Content Include="Views\UsersAdmin\Create.cshtml" />
     <Content Include="Views\UsersAdmin\Edit.cshtml" />
     <Content Include="Views\UsersAdmin\Delete.cshtml" />
+    <Content Include="Views\DevTV\DevTV.cshtml" />
+    <Content Include="Views\Dashboard\Dashboard.cshtml" />
+    <Content Include="Views\Home\Cover.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
