--- a/DevNet/DevNet/DevNet.csproj
+++ b/DevNet/DevNet/DevNet.csproj
@@ -109,14 +109,15 @@
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.Primitives">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.DurableInstancing" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -240,24 +241,29 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201504051020464_InitialCreate.cs" />
-    <Compile Include="Migrations\201504051020464_InitialCreate.Designer.cs">
-      <DependentUpon>201504051020464_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201504140304502_InitialCreate.cs" />
+    <Compile Include="Migrations\201504140304502_InitialCreate.Designer.cs">
+      <DependentUpon>201504140304502_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201504070131129_Roles.cs" />
-    <Compile Include="Migrations\201504070131129_Roles.Designer.cs">
-      <DependentUpon>201504070131129_Roles.cs</DependentUpon>
+    <Compile Include="Migrations\201504140351511_RSSFeed To User.cs" />
+    <Compile Include="Migrations\201504140351511_RSSFeed To User.Designer.cs">
+      <DependentUpon>201504140351511_RSSFeed To User.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AdminViewModel.cs" />
+    <Compile Include="Models\DevNetAnalytics.cs" />
+    <Compile Include="Models\DevNetAnalyticsViewModel.cs" />
     <Compile Include="Models\FavoriteIDE.cs" />
     <Compile Include="Models\HtmlHelpers.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProgrammingLanguage.cs" />
+    <Compile Include="Models\RSSFeedModel.cs" />
     <Compile Include="Models\SoftwareSpecialty.cs" />
     <Compile Include="Models\State.cs" />
+    <Compile Include="Models\SyndicationFeed.cs" />
+    <Compile Include="Models\SyndicationItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -268,10 +274,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\logos\full_logo.png" />
     <Content Include="Content\Site.css" />
-    <Content Include="Content\textures\crate.gif" />
+    <Content Include="Content\textures\background.png" />
     <Content Include="Content\dashboard.css" />
     <Content Include="Content\datepicker3.css" />
-    <Content Include="Content\textures\deep-red-fractal.png" />
     <Content Include="Content\textures\large_logo.png" />
     <Content Include="Content\medium_video_gallery.png" />
     <Content Include="Content\small_video_gallery.png" />
@@ -483,11 +488,11 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201504051020464_InitialCreate.resx">
-      <DependentUpon>201504051020464_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201504140304502_InitialCreate.resx">
+      <DependentUpon>201504140304502_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201504070131129_Roles.resx">
-      <DependentUpon>201504070131129_Roles.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201504140351511_RSSFeed To User.resx">
+      <DependentUpon>201504140351511_RSSFeed To User.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
